# Small-Home-Hub

./: .gitattributes  .gitignore  README.md  TODO  docker-compose.yaml  dockerfile  makeDatabase.sh  makeDocker.sh  runDocker.sh
Backend_Server/: CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp
Backend_Server/src/: CMakeLists.txt  backend.cpp  backend.hpp  devices.cpp  devices.hpp  diagnostics.hpp  events.cpp  events.hpp  signal_definitions.cpp  signal_definitions.hpp  signal_values.cpp  signal_values.hpp  system_configuration.cpp  system_configuration.hpp  users.cpp  users.hpp  utilities.cpp  utilities.hpp
Common/: CMakeLists.txt  README.md  build.sh  clean.sh
Common/include/Common/: communication.hpp  configuration.hpp  constants.hpp  database.hpp  devices.hpp  events.hpp  groups.hpp  log.hpp  runtime.hpp  shared_memory.hpp  signals.hpp  users.hpp  utilities.hpp
Common/src/: communication.cpp  configuration.cpp  database.cpp  devices.cpp  events.cpp  groups.cpp  log.cpp  runtime.cpp  shared_memory.cpp  signals.cpp  users.cpp  utilities.cpp
Communication_Server/: CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp
Communication_Server/src/: CMakeLists.txt  authentication.cpp  authentication.hpp  backend.cpp  data.cpp  data.hpp  data_collecting.cpp  data_collecting.hpp  diagnostics.cpp
Database/: config.db  config.sql
Docker/arm64/: dockerfile
Miscellaneous/: supervisord.conf
SHH/: CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp
SHH/src/: CMakeLists.txt  SHH.cpp  SHH.hpp
Website/: index.html  package-lock.json  package.json
Website/src/: App.vue
Website/src/assets/: base.css
Website/src/components/: LoadingOverlay.vue
Website/src/router/: index.ts
Website/src/views/: ConfigurationView.vue  HomeView.vue  ProfileView.vue  SettingsView.vue
